--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2018"
 [dependencies]
 ctrlc = "3.1.9"
 socket2 = "0.4.0"
+mio = "0.7.11"
+
+[features]
+default = ["mio/os-poll", "mio/net"]
